--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="Weather/index.css">
 </head>
 
 <body>
@@ -26,7 +26,7 @@
 
     </div>
 
-    <script src="index.js"></script>
+    <script src="Weather/index.js"></script>
 </body>
 
 </html>
